<resources>
    <string name="app_name">SiCamat</string>
    <string name="application_name">SI CAMAT</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="logo">ini adalah logo pemerintahan bandung</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_news">News</string>
    <string name="title_setting">Settings</string>
    <string name="date">Senin, 23 Mei 2022</string>
    <string name="agenda_name">Rapat Rutinan</string>
    <string name="weather_condition">Cerah</string>
    <string name="adzan_name">Dzuhur</string>
    <string name="weather_celcius">27°C</string>
    <string name="adzan_time">11:55</string>
    <string name="menu">Menu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="brief_pemerintah">\"Merupakan menu yang menampilkan wilayah administratif dan jumlah pns dari kecamatan bandung wetan\"</string>
    <string name="page_pemerintahan">Pemerintahan</string>
    <string name="btn_rtrw">Jumlah RT/RW</string>

</resources>