<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="64dp"
        android:layout_height="46dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="323dp"
        android:background="@drawable/logo_bandung"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_application"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/application_name"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/email"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:layout_marginTop="77dp"
        android:background="@drawable/edit_text"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:autofillHints="emailAddress"
        app:layout_constraintEnd_toEndOf="@+id/name_application"
        app:layout_constraintStart_toStartOf="@+id/name_application"
        app:layout_constraintTop_toBottomOf="@+id/name_application" />

    <EditText
        android:id="@+id/password"
        android:layout_width="312dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text"
        android:fontFamily="@font/poppins_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:autofillHints="password"
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/button"
        android:layout_width="312dp"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/button_login"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintEnd_toEndOf="@+id/password"
        app:layout_constraintStart_toStartOf="@+id/password"
        app:layout_constraintTop_toBottomOf="@+id/password" />

</androidx.constraintlayout.widget.ConstraintLayout>