<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.pemerintahan.PemerintahanActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/header_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/tv_brief"/>

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="80dp"
            android:layout_height="90dp"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_header_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_goverment"
            />
        <TextView
            android:id="@+id/tv_brief"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/iv_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:paddingBottom="50dp"
            android:text="@string/brief_pemerintah"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/ic_arrow"
            android:rotation="180"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_header_title"
            style="@style/Heading20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/page_pemerintahan"
            android:textColor="@color/white"
            android:layout_marginStart="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageButton"
            app:layout_constraintStart_toEndOf="@+id/imageButton"
            app:layout_constraintTop_toTopOf="@+id/imageButton" />

        <ImageView
            android:id="@+id/btn_rtrw"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tv_rtrw"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/agenda"
            />

        <TextView
            android:id="@+id/tv_rtrw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/btn_rtrw"
            app:layout_constraintTop_toTopOf="@id/btn_rtrw"
            android:text="@string/btn_rtrw"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:padding="20dp"
            />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_arrow"
            app:layout_constraintBottom_toBottomOf="@id/btn_rtrw"
            app:layout_constraintEnd_toEndOf="@id/btn_rtrw"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="@id/btn_rtrw"
            app:layout_constraintVertical_bias="1.0" />


        <ImageView
            android:id="@+id/btn_pns"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/btn_rtrw"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/tv_pns"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/weather"
            />

        <TextView
            android:id="@+id/tv_pns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/btn_pns"
            app:layout_constraintTop_toTopOf="@id/btn_pns"
            android:text="@string/btn_rtrw"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:padding="20dp"
            />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/ic_arrow"
            app:layout_constraintBottom_toBottomOf="@id/btn_pns"
            app:layout_constraintEnd_toEndOf="@id/btn_pns"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="@id/btn_pns"
            app:layout_constraintVertical_bias="1.0" />





    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>